nextcloud/ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress        
  namespace: nextcloud  
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"     
    nginx.ingress.kubernetes.io/proxy-body-size: 51200m   
    nginx.ingress.kubernetes.io/server-snippet: |-
       server_tokens off;
       proxy_hide_header X-Powered-By;
    nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 225m
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  ingressClassName: nginx
  tls: 
  - hosts:
    - nextcloud.example.inf.br
    secretName: nextcloud.example.inf.br-tls 
  rules:
  - host: nextcloud.example.inf.br
    http:
      paths:
      - path: /
        pathType: Prefix  # pathType no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
        backend:
          service:
            name: nginx-service
            port:
              number: 80
